Update column yml and csv on dmu32

--- a/dmu32/the_end.ipynb
+++ b/dmu32/the_end.ipynb
@@ -320,6 +320,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ELAIS-N1\n",
+      "../dmu28/dmu28_ELAIS-N1/data/zphot/HELP_final_results.fits\n"
+     ]
+    }
+   ],
+   "source": [
+    "fieldname = fields_info['fields'][0]['name']\n",
+    "fieldname='ELAIS-N1'\n",
+    "print(fieldname)\n",
+    "\n",
+    "dmu32_info = yaml.load(open('./dmu32_{}/meta_main.yml'.format(fieldname), 'r'))\n",
+    "\n",
+    "print(dmu32_info['cigale'].replace('dmu_products', '..'))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for field in fields_info['fields']:\n",
+    "    print(field['name'])\n",
+    "    dmu32_info ="
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -357,8 +395,8 @@
     "for field in fields_info['fields']:\n",
     "    print(field['name'])\n",
     "    dr1_data_products['xid_objects'][dr1_data_products['field'] == field['name']] = xid_objects\n",
-    "    dr1_data_products['xid_objects'][dr1_data_products['field'] == field['name']] = xid_objects\n",
-    "    dr1_data_products['xid_objects'][dr1_data_products['field'] == field['name']] = xid_objects"
+    "    dr1_data_products['photoz_objects'][dr1_data_products['field'] == field['name']] = photoz_objects\n",
+    "    dr1_data_products['cigale_objects'][dr1_data_products['field'] == field['name']] = cigale_objects"
    ]
   },
   {
@@ -431,6 +469,92 @@
    ],
    "source": [
     "dr1_data_products"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "test = Table.read('/Users/rs548/Downloads/sgp_20180221_cigale_0.fits')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "&lt;Column name=&apos;flag_spire_250&apos; dtype=&apos;float64&apos; unit=&apos;mag&apos; description=&apos;Flag set to true for sources for which niether the spire_250 aperture nor total flux should       not be used for SED fitting (see documentation).&apos; length=100000&gt;\n",
+       "<table>\n",
+       "<tr><td>0.0</td></tr>\n",
+       "<tr><td>0.0</td></tr>\n",
+       "<tr><td>0.0</td></tr>\n",
+       "<tr><td>0.0</td></tr>\n",
+       "<tr><td>0.0</td></tr>\n",
+       "<tr><td>0.0</td></tr>\n",
+       "<tr><td>0.0</td></tr>\n",
+       "<tr><td>0.0</td></tr>\n",
+       "<tr><td>0.0</td></tr>\n",
+       "<tr><td>0.0</td></tr>\n",
+       "<tr><td>0.0</td></tr>\n",
+       "<tr><td>0.0</td></tr>\n",
+       "<tr><td>...</td></tr>\n",
+       "<tr><td>0.0</td></tr>\n",
+       "<tr><td>0.0</td></tr>\n",
+       "<tr><td>0.0</td></tr>\n",
+       "<tr><td>0.0</td></tr>\n",
+       "<tr><td>0.0</td></tr>\n",
+       "<tr><td>0.0</td></tr>\n",
+       "<tr><td>0.0</td></tr>\n",
+       "<tr><td>1.0</td></tr>\n",
+       "<tr><td>0.0</td></tr>\n",
+       "<tr><td>0.0</td></tr>\n",
+       "<tr><td>0.0</td></tr>\n",
+       "<tr><td>0.0</td></tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<Column name='flag_spire_250' dtype='float64' unit='mag' description='Flag set to true for sources for which niether the spire_250 aperture nor total flux should       not be used for SED fitting (see documentation).' length=100000>\n",
+       "0.0\n",
+       "0.0\n",
+       "0.0\n",
+       "0.0\n",
+       "0.0\n",
+       "0.0\n",
+       "0.0\n",
+       "0.0\n",
+       "0.0\n",
+       "0.0\n",
+       "0.0\n",
+       "0.0\n",
+       "...\n",
+       "0.0\n",
+       "0.0\n",
+       "0.0\n",
+       "0.0\n",
+       "0.0\n",
+       "0.0\n",
+       "0.0\n",
+       "1.0\n",
+       "0.0\n",
+       "0.0\n",
+       "0.0\n",
+       "0.0"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test['flag_spire_250']"
    ]
   },
   {
