meta hack on SGP
this is why I dont like opening fits files and saving them with added meta - it broke some later stages of the pipeline. I think files whould be written and left to avoid this. If a file is changed it should be saved with a new name

--- a/dmu28/dmu28_SGP/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_SGP/CIGALE_catalogue_preparation.ipynb
@@ -198,6 +198,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "non_band_flags = ['flag_cigale', \n",
+    "                  'flag_cigale_opt', \n",
+    "                  'flag_cigale_ir', \n",
+    "                  'flag_cigale_ironly', \n",
+    "                  'flag_gaia', \n",
+    "                  'flag_cleaned', \n",
+    "                  'flag_merged', \n",
+    "                  'flag_optnir_obs', \n",
+    "                  'flag_optnir_det']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {
     "collapsed": true
@@ -6183,6 +6200,13 @@
     "        \n",
     "    file_num = tile.split('_')[4].split('.')[0]\n",
     "    best_catalogue = Table.read(tile)\n",
+    "    \n",
+    "    #Temp solution to problem caused by flag unit = mag:\n",
+    "    for col in best_catalogue.colnames:\n",
+    "        if col.startswith('flag_') and (col not in non_band_flags):\n",
+    "            best_catalogue[col].unit = None\n",
+    "            best_catalogue[col] = best_catalogue[col].astype(bool)\n",
+    "            \n",
     "    \n",
     "    optnir = ((best_catalogue['flag_optnir_det'] == 3) \n",
     "          | (best_catalogue['flag_optnir_det'] == 7))\n",
