--- a/dmu32/the_end.ipynb
+++ b/dmu32/the_end.ipynb
@@ -484,71 +484,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test['flag_spire_250'] = test['flag_spire_250'].astype(bool)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test['flag_spire_250'].unit = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "&lt;Column name=&apos;flag_spire_250&apos; dtype=&apos;float64&apos; unit=&apos;mag&apos; description=&apos;Flag set to true for sources for which niether the spire_250 aperture nor total flux should       not be used for SED fitting (see documentation).&apos; length=100000&gt;\n",
+       "&lt;Column name=&apos;flag_spire_250&apos; dtype=&apos;bool&apos; description=&apos;Flag set to true for sources for which niether the spire_250 aperture nor total flux should       not be used for SED fitting (see documentation).&apos; length=100000&gt;\n",
        "<table>\n",
-       "<tr><td>0.0</td></tr>\n",
-       "<tr><td>0.0</td></tr>\n",
-       "<tr><td>0.0</td></tr>\n",
-       "<tr><td>0.0</td></tr>\n",
-       "<tr><td>0.0</td></tr>\n",
-       "<tr><td>0.0</td></tr>\n",
-       "<tr><td>0.0</td></tr>\n",
-       "<tr><td>0.0</td></tr>\n",
-       "<tr><td>0.0</td></tr>\n",
-       "<tr><td>0.0</td></tr>\n",
-       "<tr><td>0.0</td></tr>\n",
-       "<tr><td>0.0</td></tr>\n",
+       "<tr><td>False</td></tr>\n",
+       "<tr><td>False</td></tr>\n",
+       "<tr><td>False</td></tr>\n",
+       "<tr><td>False</td></tr>\n",
+       "<tr><td>False</td></tr>\n",
+       "<tr><td>False</td></tr>\n",
+       "<tr><td>False</td></tr>\n",
+       "<tr><td>False</td></tr>\n",
+       "<tr><td>False</td></tr>\n",
+       "<tr><td>False</td></tr>\n",
+       "<tr><td>False</td></tr>\n",
+       "<tr><td>False</td></tr>\n",
        "<tr><td>...</td></tr>\n",
-       "<tr><td>0.0</td></tr>\n",
-       "<tr><td>0.0</td></tr>\n",
-       "<tr><td>0.0</td></tr>\n",
-       "<tr><td>0.0</td></tr>\n",
-       "<tr><td>0.0</td></tr>\n",
-       "<tr><td>0.0</td></tr>\n",
-       "<tr><td>0.0</td></tr>\n",
-       "<tr><td>1.0</td></tr>\n",
-       "<tr><td>0.0</td></tr>\n",
-       "<tr><td>0.0</td></tr>\n",
-       "<tr><td>0.0</td></tr>\n",
-       "<tr><td>0.0</td></tr>\n",
+       "<tr><td>False</td></tr>\n",
+       "<tr><td>False</td></tr>\n",
+       "<tr><td>False</td></tr>\n",
+       "<tr><td>False</td></tr>\n",
+       "<tr><td>False</td></tr>\n",
+       "<tr><td>False</td></tr>\n",
+       "<tr><td>False</td></tr>\n",
+       "<tr><td>True</td></tr>\n",
+       "<tr><td>False</td></tr>\n",
+       "<tr><td>False</td></tr>\n",
+       "<tr><td>False</td></tr>\n",
+       "<tr><td>False</td></tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "<Column name='flag_spire_250' dtype='float64' unit='mag' description='Flag set to true for sources for which niether the spire_250 aperture nor total flux should       not be used for SED fitting (see documentation).' length=100000>\n",
-       "0.0\n",
-       "0.0\n",
-       "0.0\n",
-       "0.0\n",
-       "0.0\n",
-       "0.0\n",
-       "0.0\n",
-       "0.0\n",
-       "0.0\n",
-       "0.0\n",
-       "0.0\n",
-       "0.0\n",
-       "...\n",
-       "0.0\n",
-       "0.0\n",
-       "0.0\n",
-       "0.0\n",
-       "0.0\n",
-       "0.0\n",
-       "0.0\n",
-       "1.0\n",
-       "0.0\n",
-       "0.0\n",
-       "0.0\n",
-       "0.0"
+       "<Column name='flag_spire_250' dtype='bool' description='Flag set to true for sources for which niether the spire_250 aperture nor total flux should       not be used for SED fitting (see documentation).' length=100000>\n",
+       "False\n",
+       "False\n",
+       "False\n",
+       "False\n",
+       "False\n",
+       "False\n",
+       "False\n",
+       "False\n",
+       "False\n",
+       "False\n",
+       "False\n",
+       "False\n",
+       "  ...\n",
+       "False\n",
+       "False\n",
+       "False\n",
+       "False\n",
+       "False\n",
+       "False\n",
+       "False\n",
+       " True\n",
+       "False\n",
+       "False\n",
+       "False\n",
+       "False"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
