REran pipeline summary

--- a/dmu32/the_end.ipynb
+++ b/dmu32/the_end.ipynb
@@ -25,7 +25,7 @@
       "This notebook was run with herschelhelp_internal version: \n",
       "017bb1e (Mon Jun 18 14:58:59 2018 +0100)\n",
       "This notebook was executed on: \n",
-      "2018-06-27 15:50:19.036825\n"
+      "2018-06-27 16:10:24.892925\n"
      ]
     }
    ],
@@ -107,7 +107,7 @@
      "data": {
       "text/html": [
        "<i>Table length=23</i>\n",
-       "<table id=\"table140153766518736-103825\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139660418697536-36575\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>field</th><th>dr1_suffix</th><th>last_suffix</th><th>objects</th><th>area_sq_degrees</th><th>file_size_bytes</th><th>file_size_readable</th></tr></thead>\n",
        "<tr><td>0</td><td>AKARI-NEP</td><td>20180215</td><td>20180215</td><td>531746</td><td>9.194732358779467</td><td>348848640</td><td>348.85 MB</td></tr>\n",
        "<tr><td>1</td><td>AKARI-SEP</td><td>20180221</td><td>20180221</td><td>844172</td><td>8.713306475131118</td><td>538606080</td><td>538.61 MB</td></tr>\n",
@@ -155,14 +155,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140153766518736-103825').dataTable()\");\n",
+       "    console.log(\"$('#table139660418697536-36575').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140153766518736-103825').dataTable({\n",
+       "    $('#table139660418697536-36575').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -419,7 +419,7 @@
       "GAMA-15:\n",
       "  - xid: dmu_products/dmu26/dmu26_XID+SPIRE_GAMA-15/data/dmu26_XID+SPIRE_GAMA-15_cat_20180416.fits\n",
       "  - photoz: dmu_products/dmu24/dmu24_GAMA-15/data/master_catalogue_gama-15_20180119_photoz_20180210_r_optimised.fits\n",
-      "  - cigale not done.\n",
+      "  - cigale: dmu_products/dmu28/dmu28_GAMA-15/data/zphot/HELP_final_results.fits\n",
       "HDF-N:\n",
       "  - xid not done.\n",
       "  - photoz not done.\n",
@@ -514,7 +514,7 @@
      "data": {
       "text/html": [
        "<i>Table length=23</i>\n",
-       "<table id=\"table140153766517504\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139660418698152\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>field</th><th>dr1_suffix</th><th>last_suffix</th><th>objects</th><th>area_sq_degrees</th><th>file_size_bytes</th><th>file_size_readable</th><th>xid_objects</th><th>photoz_objects</th><th>cigale_objects</th></tr></thead>\n",
        "<thead><tr><th>bytes18</th><th>bytes20</th><th>bytes20</th><th>int64</th><th>float64</th><th>int64</th><th>bytes20</th><th>int64</th><th>int64</th><th>int64</th></tr></thead>\n",
        "<tr><td>AKARI-NEP</td><td>20180215</td><td>20180215</td><td>531746</td><td>9.194732358779467</td><td>348848640</td><td>348.85 MB</td><td>0</td><td>0</td><td>0</td></tr>\n",
@@ -590,8 +590,8 @@
       "      This is a total of 8075547 objects with an average of 10% of objects on processed areas.\n",
       "Photo-zs: There are 13 fields with photozs computed totalling 858.11 square degrees.\n",
       "      This is a total of 70576485 objects with an average of 62% of objects on processed areas.\n",
-      "CIGALE SEDs: There are 7 fields with SEDs computed totalling 187.70 square degrees.\n",
-      "      This is a total of 385728 objects with an average of 1% of objects on processed areas.\n"
+      "CIGALE SEDs: There are 8 fields with SEDs computed totalling 249.40 square degrees.\n",
+      "      This is a total of 502962 objects with an average of 1% of objects on processed areas.\n"
      ]
     }
    ],
