--- a/dmu28/dmu28_SGP/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_SGP/CIGALE_catalogue_preparation.ipynb
@@ -199,7 +199,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "non_band_flags = ['flag_cigale', \n",
@@ -6589,10 +6591,30 @@
     "        \n",
     "    file_num = tile.split('_')[4].split('.')[0]\n",
     "    best_catalogue = Table.read(tile)\n",
+    "    \n",
+    "    #Temp solution to problem caused by flag unit = mag:\n",
+    "    for col in best_catalogue.colnames:\n",
+    "        if col.startswith('flag_') and (col not in non_band_flags):\n",
+    "            best_catalogue[col].unit = None\n",
+    "            best_catalogue[col] = best_catalogue[col].astype(bool)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
     "    optnir = ((best_catalogue['flag_optnir_det'] == 3) \n",
     "          | (best_catalogue['flag_optnir_det'] == 7))\n",
     "    \n",
-    "    best_catalogue = best_catalogue[optnir]\n",
+    "    good = {}\n",
+    "    for band in [ 'spire_250', 'spire_350', 'spire_500']:\n",
+    "        good[band] = (~np.isnan(best_catalogue['f_{}'.format(band)]) & \n",
+    "                                       ~best_catalogue['flag_{}'.format(band)])\n",
+    "        good[band][good[band]] &= (best_catalogue[good[band]]['f_{}'.format(band)] /\n",
+    "                                  best_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)\n",
+    "    \n",
+    "    combined_good = np.sum(list(good.values()), axis=0) >= 2\n",
+    "    \n",
+    "    best_catalogue = best_catalogue[combined_good]\n",
+    "    #best_catalogue = best_catalogue[optnir]\n",
     "\n",
     "\n",
     "    best_catalogue = best_catalogue[~np.isnan(best_catalogue[\"zspec\"])]\n",
@@ -6617,7 +6639,7 @@
     "    remove_unneeded_fluxes(y_bands)\n",
     "\n",
     "\n",
-    "    best_catalogue.write(\"data_tmp/tiles/SGP_cigale_optnir_extcor_zspec_{}_{}.fits\".format(SUFFIX, file_num), \n",
+    "    best_catalogue.write(\"data_tmp/tiles/SGP_cigale_best_extcor_zspec_{}_{}.fits\".format(SUFFIX, file_num), \n",
     "                         overwrite=True)\n",
     "    \n",
     "print(\"Number of zspec optnir objects: {}\".format(n_zspec))"
