--- a/dmu22/dmu22_SPIRE-NEP/XID+BLIND_SPIRE-NEP_final_processing.ipynb
+++ b/dmu22/dmu22_SPIRE-NEP/XID+BLIND_SPIRE-NEP_final_processing.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Final Processing\n",
+    "# Final Processing of SPIRE-NEP Blind source catalogue\n",
+    "\n",
+    "![HELP LOGO](https://avatars1.githubusercontent.com/u/7880370?s=100&v=4>)\n",
+    "\n",
+    "\n",
     "The final processing stage requires:\n",
     "1. Quick validation of blind catalogues and Bayesian Pvalue maps\n",
     "2. Skewness level\n",
@@ -59,7 +63,7 @@
      "data": {
       "text/html": [
        "<i>Table length=10</i>\n",
-       "<table id=\"table4461035416\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4385374672\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>HELP_ID</th><th>RA</th><th>Dec</th><th>F_SPIRE_250</th><th>FErr_SPIRE_250_u</th><th>FErr_SPIRE_250_l</th><th>F_SPIRE_350</th><th>FErr_SPIRE_350_u</th><th>FErr_SPIRE_350_l</th><th>F_SPIRE_500</th><th>FErr_SPIRE_500_u</th><th>FErr_SPIRE_500_l</th><th>Bkg_SPIRE_250</th><th>Bkg_SPIRE_350</th><th>Bkg_SPIRE_500</th><th>Sig_conf_SPIRE_250</th><th>Sig_conf_SPIRE_350</th><th>Sig_conf_SPIRE_500</th><th>Rhat_SPIRE_250</th><th>Rhat_SPIRE_350</th><th>Rhat_SPIRE_500</th><th>n_eff_SPIRE_250</th><th>n_eff_SPIRE_500</th><th>n_eff_SPIRE_350</th><th>Pval_res_250</th><th>Pval_res_350</th><th>Pval_res_500</th></tr></thead>\n",
        "<thead><tr><th></th><th>deg</th><th>deg</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th>mJy/Beam</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>bytes27</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th></tr></thead>\n",
@@ -327,7 +331,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# all flux denisties are in mJy in the final BLIND cahtalogues\n",
+    "# all flux denisties are in mJy in the final BLIND catalogues\n",
     "cat_all['F_BLIND_MF_SPIRE_250'].unit = 'mJy'\n",
     "cat_all['F_BLIND_MF_SPIRE_250'] = 1000*cat_all['F_BLIND_MF_SPIRE_250']\n",
     "cat_all['FErr_BLIND_MF_SPIRE_250'].unit = 'mJy'\n",
@@ -404,23 +408,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "*This is a default HELP jupyter notebook *\n",
+    "\n",
+    " ![HELP LOGO](https://avatars1.githubusercontent.com/u/7880370?s=75&v=4)\n",
+    "\n",
+    "**Authors**: S. Duivenvoorden\n",
+    "\n",
+    " \n",
+    "For a full description of the database and how it is organised in to `dmu_products` please the top level [readme](../readme.md).\n",
+    " \n",
+    "The Herschel Extragalactic Legacy Project, ([HELP](http://herschel.sussex.ac.uk/)), is a [European Commission Research Executive Agency](https://ec.europa.eu/info/departments/research-executive-agency_en)\n",
+    "funded project under the SP1-Cooperation, Collaborative project, Small or medium-scale focused research project, FP7-SPACE-2013-1 scheme, Grant Agreement\n",
+    "Number 607254.\n",
+    "\n",
+    "[Acknowledgements](http://herschel.sussex.ac.uk/acknowledgements)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
