--- a/dmu32/the_end.ipynb
+++ b/dmu32/the_end.ipynb
@@ -25,7 +25,7 @@
       "This notebook was run with herschelhelp_internal version: \n",
       "017bb1e (Mon Jun 18 14:58:59 2018 +0100)\n",
       "This notebook was executed on: \n",
-      "2018-06-27 16:10:24.892925\n"
+      "2018-06-27 17:34:31.287600\n"
      ]
     }
    ],
@@ -107,7 +107,7 @@
      "data": {
       "text/html": [
        "<i>Table length=23</i>\n",
-       "<table id=\"table139660418697536-36575\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140033271766264-943237\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>field</th><th>dr1_suffix</th><th>last_suffix</th><th>objects</th><th>area_sq_degrees</th><th>file_size_bytes</th><th>file_size_readable</th></tr></thead>\n",
        "<tr><td>0</td><td>AKARI-NEP</td><td>20180215</td><td>20180215</td><td>531746</td><td>9.194732358779467</td><td>348848640</td><td>348.85 MB</td></tr>\n",
        "<tr><td>1</td><td>AKARI-SEP</td><td>20180221</td><td>20180221</td><td>844172</td><td>8.713306475131118</td><td>538606080</td><td>538.61 MB</td></tr>\n",
@@ -155,14 +155,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table139660418697536-36575').dataTable()\");\n",
+       "    console.log(\"$('#table140033271766264-943237').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table139660418697536-36575').dataTable({\n",
+       "    $('#table140033271766264-943237').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -426,7 +426,7 @@
       "  - cigale not done.\n",
       "Herschel-Stripe-82:\n",
       "  - xid not done.\n",
-      "  - photoz not done.\n",
+      "  - photoz: dmu_products/dmu24/dmu24_Herschel-Stripe-82/data/master_catalogue_herschel-stripe-82_20180307_photoz_20180509.fits\n",
       "  - cigale not done.\n",
       "Lockman-SWIRE:\n",
       "  - xid: dmu_products/dmu26/dmu26_XID+MIPS_Lockman-SWIRE/data/dmu26_XID+MIPS_Lockman-SWIRE_cat_20171214.fits\n",
@@ -514,7 +514,7 @@
      "data": {
       "text/html": [
        "<i>Table length=23</i>\n",
-       "<table id=\"table139660418698152\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140033271765256\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>field</th><th>dr1_suffix</th><th>last_suffix</th><th>objects</th><th>area_sq_degrees</th><th>file_size_bytes</th><th>file_size_readable</th><th>xid_objects</th><th>photoz_objects</th><th>cigale_objects</th></tr></thead>\n",
        "<thead><tr><th>bytes18</th><th>bytes20</th><th>bytes20</th><th>int64</th><th>float64</th><th>int64</th><th>bytes20</th><th>int64</th><th>int64</th><th>int64</th></tr></thead>\n",
        "<tr><td>AKARI-NEP</td><td>20180215</td><td>20180215</td><td>531746</td><td>9.194732358779467</td><td>348848640</td><td>348.85 MB</td><td>0</td><td>0</td><td>0</td></tr>\n",
@@ -528,7 +528,7 @@
        "<tr><td>ELAIS-S1</td><td>20180416</td><td>20180416</td><td>1655564</td><td>9.002940646885508</td><td>1970156160</td><td>1.97 GB</td><td>194276</td><td>1102319</td><td>25393</td></tr>\n",
        "<tr><td>GAMA-09</td><td>20180601</td><td>20180601</td><td>12937982</td><td>62.01393417284915</td><td>19911611520</td><td>19.91 GB</td><td>1386659</td><td>8834023</td><td>130293</td></tr>\n",
        "<tr><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td></tr>\n",
-       "<tr><td>Herschel-Stripe-82</td><td>20180307</td><td>20180307</td><td>50196455</td><td>363.22747930641884</td><td>127047306240</td><td>127.05 GB</td><td>0</td><td>0</td><td>0</td></tr>\n",
+       "<tr><td>Herschel-Stripe-82</td><td>20180307</td><td>20180307</td><td>50196455</td><td>363.22747930641884</td><td>127047306240</td><td>127.05 GB</td><td>0</td><td>21613821</td><td>0</td></tr>\n",
        "<tr><td>Lockman-SWIRE</td><td>20180219</td><td>20180219</td><td>4366298</td><td>22.413863402949218</td><td>5195931840</td><td>5.2 GB</td><td>242065</td><td>1382438</td><td>46719</td></tr>\n",
        "<tr><td>NGP</td><td>20180219</td><td>20180501</td><td>6759591</td><td>177.6981971077162</td><td>4954806720</td><td>4.95 GB</td><td>0</td><td>3175339</td><td>0</td></tr>\n",
        "<tr><td>SA13</td><td>20180501</td><td>20180501</td><td>9799</td><td>0.27416379328431184</td><td>2721600</td><td>2.72 MB</td><td>0</td><td>0</td><td>0</td></tr>\n",
@@ -556,7 +556,7 @@
        "          ELAIS-S1   20180416    20180416 ...        1102319          25393\n",
        "           GAMA-09   20180601    20180601 ...        8834023         130293\n",
        "               ...        ...         ... ...            ...            ...\n",
-       "Herschel-Stripe-82   20180307    20180307 ...              0              0\n",
+       "Herschel-Stripe-82   20180307    20180307 ...       21613821              0\n",
        "     Lockman-SWIRE   20180219    20180219 ...        1382438          46719\n",
        "               NGP   20180219    20180501 ...        3175339              0\n",
        "              SA13   20180501    20180501 ...              0              0\n",
@@ -588,8 +588,8 @@
      "text": [
       "XID+: There are 9 fields with XID+ fluxes computed totalling 543.97 square degrees.\n",
       "      This is a total of 8075547 objects with an average of 10% of objects on processed areas.\n",
-      "Photo-zs: There are 13 fields with photozs computed totalling 858.11 square degrees.\n",
-      "      This is a total of 70576485 objects with an average of 62% of objects on processed areas.\n",
+      "Photo-zs: There are 14 fields with photozs computed totalling 1221.34 square degrees.\n",
+      "      This is a total of 92190306 objects with an average of 56% of objects on processed areas.\n",
       "CIGALE SEDs: There are 8 fields with SEDs computed totalling 249.40 square degrees.\n",
       "      This is a total of 502962 objects with an average of 1% of objects on processed areas.\n"
      ]
