Make final notebook more comprehensible

--- a/dmu32/the_end.ipynb
+++ b/dmu32/the_end.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Final stage of HELP data processing\n",
     "\n",
-    "This notebook performs collates the final output files ready for writing to csv for ingestion to a VO server\n",
+    "This notebook collates the final output files ready for writing to csv for ingestion to a VO server. At the bottom of the notebook we also summarise the pipeline products which are processed on a given field. This are generated using the dmu32 meta_main.yml files which contain links to the XID+, CIGALE and photo-z catalogues which feed in to the final catalogues for publishing.\n",
+    "\n",
+    "Summary of notebook:\n",
     "\n",
     "- Take DR1 masterlist suffixes from overview table\n",
     "- Find dmu32 full table names and write to a file\n",
@@ -30,7 +32,6 @@
     }
    ],
    "source": [
-    "\n",
     "from  herschelhelp_internal  import git_version\n",
     "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))\n",
     "import datetime\n",
